<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="downloading">Downloading file</string>
    <string name="appreco">Recommended app</string>
    <string name="appsreco">Recommended apps</string>
    <string name="rewarded_msg">To access this content it\'s necessary to watch a video</string>
    <string name="notificaciones">Notifications</string>
    <string name="listanotifs_vacia">There isn\'t any notification</string>
    <string name="ahora">Now</string>
    <string name="confirmar_elimnotifs">Do you want to delete all notifications?</string>
    <string name="suscripciones">Subscriptions</string>
    <string name="usuario">User</string>
    <string name="contra">Password</string>
    <string name="fb_login">Log in with Facebook</string>
    <string name="confirm_exit">Tap back once more to exit</string>
    <string name="privacidad">Privacy Policy</string>
    <string name="favorito_activar">From now on you will receive information about the activity of this person</string>
    <string name="hacomentadoentuperfil">has commented on you profile</string>
    <string name="hacomentadoperfilde">commented on</string>
    <string name="haanyadidofotogal">added a picture</string>
    <string name="hamodiffperfil">has changed their profile picture</string>
    <string name="hamodifdescr">has changed its description</string>
    <string name="petic_descr">Description:</string>
    <string name="petic_fnac">Birthday:</string>
    <string name="falta_descr">Please, enter a short description</string>
    <string name="falta_fnac">Please, enter your birthday</string>
    <string name="falta_sexo">Please, select your gender</string>
    <string name="dia">Day</string>
    <string name="mes">Month</string>
    <string name="anyo">Year</string>
    <string name="petic_sexo">Gender:</string>
    <string name="comentariospub">PUBLIC COMMENTS</string>
    <string name="comentarios">Comments</string>
    <string name="noadmitecoments">This user doesn\'t admit comments</string>
    <string name="confirmar_reportarfoto">It will send a message to review this picture. Continue?</string>
    <string name="confirmar_elimcoment">Do you want to delete this comment?</string>
    <string name="confirmar_elimfoto">Do you want to delete this picture?</string>
    <string name="edad_min">Min.Age</string>
    <string name="edad_max">Max.Age</string>
    <string name="todo">All</string>
    <string name="hombres">Men</string>
    <string name="mujeres">Women</string>
    <string name="dist">Distance</string>
    <string name="anyos_abrev">y.</string>
    <string name="filtrar">Filter</string>
    <string name="sin_usus">Users not found</string>
    <string name="imagenes">Images</string>
    <string name="anyadir">Add</string>
    <string name="tegusta">You like it</string>
    <string name="hoy">Today</string>
    <string name="perfil">Profile</string>
    <string name="guardaprimero">Please save your details to use this option</string>
    <string name="wv_sinconex">Please, check your internet connection</string>
    <string name="enviaunaimg">sends an image</string>
    <string name="selparaabrir">Show image</string>
    <string name="enviarimg">Send image</string>
    <string name="selimg">Select image</string>
    <string name="txt_pedirprivado">Open private chat</string>
    <string name="elimprivado">Delete private chat</string>
    <string name="sincontesta_esperandopriv">User hasn\'t responded</string>
    <string name="confirmar_ningunprivado">You no longer receive private messages.\n\nYou will be able to modify it from your profile.</string>
    <string name="chatprivadocon">Private chat with</string>
    <string name="tit_esperandopriv">Private chat</string>
    <string name="msg_esperandopriv">Waiting for user response</string>
    <string name="noadmiteprivados">This user doesn\'t admit private chats</string>
    <string name="confirmar_salirprivado">Want to leave the private chat?</string>
    <string name="avisodenegarprivados">This user can no longer send you private messages</string>
    <string name="solicitaprivado">has sent you a private message</string>
    <string name="permitirprivados">Private chats:</string>
    <string name="listaprivados">Private chats history</string>
    <string name="listaprivados_vacia">· There aren\'t private chats.\n\n· You can create a private chat with a user by clicking one of his messages.</string>
    <string name="confirmar_elimprivado">Do you want to delete this private chat?</string>
    <string name="confirmar_bloquearprivado">Do you want to block this user?</string>
    <string name="nomostrarmas">Please don\'t show again</string>
    <string name="dice">says</string>
    <string name="conversar">Talk to us</string>
    <string name="guardado">Data has been saved</string>
    <string name="completar_perfil">Please, complete your profile</string>
    <string name="perfil_desactivado">Your profile has been deleted</string>
    <string name="avisos">Receive alerts:</string>
    <string name="chat_acceso">Access</string>
    <string name="chat_introduce_contra">Enter password</string>
    <string name="eliminando">Deleting..</string>
    <string name="usu_eliminado">User deleted</string>
    <string name="tomardecamara">Use camera</string>
    <string name="tomardesd">Select photo</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="guardando">Saving..</string>
    <string name="recuperando">Retrieving..</string>
    <string name="comprobando">Checking..</string>
    <string name="tomarfoto">Take photo</string>
    <string name="confirmarbaja">Are you sure you want to unsubscribe?</string>
    <string name="falta_fotos">Please enter a photo</string>
    <string name="perfileliminado">Your profile has been removed</string>
    <string name="nosd">Your device doesn\'t have external storage.\n\nThe app can\'t start.</string>
    <string name="chat_contra_necesaria">You must enter the password</string>
    <string name="confirmar_elimusu">Do you want to report this user?\n\nA notice will be sent to the system to review this user and hereafter you won\'t see more him.</string>
    <string name="denunciar">Report user</string>
    <string name="contra_ko">Incorrect password</string>
    <string name="foto">Photo</string>
    <string name="guardar">SAVE</string>
    <string name="darmedebaja">Unsubscribe</string>
    <string name="anteriores">Previous</string>
    <string name="primer_msg_chat">Thank you very much for contacting us.\n\nWe will respond to your messages as soon as possible.</string>
    <string name="tit_chat">Talk to us</string>
    <string name="pon_nombre">Please enter your name</string>
    <string name="inicializando">Loading settings..</string>
    <string name="cargando_recursos">Loading resources..</string>
    <string name="cargando_splash">Loading startup image..</string>
    <string name="cargando_icohome">Loading home icon..</string>
    <string name="cargando_icosmenu">Loading menu icons..</string>
    <string name="cargando">Loading..</string>
    <string name="appnoreg">Application not registered</string>
    <string name="nogcm">You aren\'t registered properly in the application.\n\nPlease restart it.</string>
    <string name="tu">You</string>
    <string name="error_http_tit">Disconnected</string>
    <string name="petic_nombre">Your name:</string>
    <string name="opcional">(optional)</string>
    <string name="selecciona">Select..</string>
</resources>